terraform/compute.tf
resource "google_compute_address" "prod" {
  name   = "cockple-prod-ip"
  region = "asia-northeast3"
}

resource "google_compute_instance" "prod" {
  name                      = "cockple-prod"
  machine_type              = "e2-medium" # 4GB RAM
  zone                      = "asia-northeast3-b"
  tags                      = ["cockple-prod"]
  allow_stopping_for_update = true

  boot_disk {
    initialize_params {
      # latest 버전은 사용하지 않기.
      image = "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260520"
      size  = 30
    }
  }

  network_interface {
    subnetwork = google_compute_subnetwork.prod.id
    access_config {
      nat_ip = google_compute_address.prod.address
    }
  }

  metadata = {
    ssh-keys = "ubuntu:${var.ssh_public_key}"
  }

  service_account {
    email  = google_service_account.cockple_app.email
    scopes = ["cloud-platform"]
  }

  metadata_startup_script = <<-EOF
    #!/bin/bash
    apt-get update -y
    apt-get install -y ca-certificates curl gnupg
    install -m 0755 -d /etc/apt/keyrings
    curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg
    chmod a+r /etc/apt/keyrings/docker.gpg
    echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
    apt-get update -y
    apt-get install -y docker-ce docker-ce-cli containerd.io docker-compose-plugin
    systemctl enable docker
    systemctl start docker
    usermod -aG docker ubuntu
  EOF
}
